docs: expand troubleshooting guide with detailed resolution steps
- Add symptoms, detailed steps and validation for each issue
- Include example commands and configurations
- Add network connectivity troubleshooting section
- Structure content into Symptoms/Resolution/Validation sections
- Include code snippets for key configuration changes
- Add debug log locations and monitoring guidance

This helps developers quickly identify and resolve common problems.

Fixes #17, PR feedback